--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
+    "primereact": "^10.9.7",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
