--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.9.1",
     "rechart": "^0.0.1",
-    "recharts": "^3.2.1"
+    "recharts": "^3.2.1",
+    "sweetalert2": "^11.25.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
