--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.1",
     "bootstrap": "^5.3.8",
     "chart.js": "^4.5.0",
     "primereact": "^10.9.7",
@@ -20,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.9.1",
+    "react-to-pdf": "^2.0.1",
     "rechart": "^0.0.1",
     "recharts": "^3.2.1",
     "sweetalert2": "^11.25.0"
