--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.4",
     "@react-pdf/renderer": "^4.3.1",
     "bootstrap": "^5.3.8",
     "chart.js": "^4.5.0",
